United StatesChange Country, Oracle Worldwide Web Sites Communities I am a... I want to...
Bug ID: 6926782 CodeBuffer size too small after 6921352
6926782 : CodeBuffer size too small after 6921352

Details
Type:
Bug
Submit Date:
2010-02-16
Status:
Resolved
Updated Date:
2010-07-29
Project Name:
JDK
Resolved Date:
2010-03-02
Component:
hotspot
OS:
generic
Sub-Component:
compiler
CPU:
generic
Priority:
P3
Resolution:
Fixed
Affected Versions:
hs17
Fixed Versions:
hs17

Related Reports
Backport:
Backport:
Relates:
Relates:

Sub Tasks

Description
In the changes for 6921352 I forgot to increase the CodeBuffer size and thus we sometimes get an assert when generating code:

http://sqeweb.sfbay/nfs/tools/gtee/results/JDK7/NIGHTLY/VM/2010-02-14/Comp_Baseline/javase/linux-i586/server/comp/linux-i586_server_comp_UTIL_REGRESSION/analysis.html

#  Internal Error (/tmp/jprt/P1/B/233753.kvn/source/src/share/vm/asm/codeBuffer.hpp:169), pid=26304, tid=3011459984
#  Error: assert(allocates2(pc),"")

                                    

Comments
EVALUATION

ChangeSet=http://hg.openjdk.java.net/jdk7/hotspot-comp/hotspot/rev/b4b440360f1e,ChangeRequest=6926782
                                     
2010-02-18
SUGGESTED FIX

Increase the CodeBuffer size but additionally emit the deopt MH handler only when it's required.
                                     
2010-02-16



Hardware and Software, Engineered to Work Together