6926782: CodeBuffer size too small after 6921352

After 6921352 the CodeBuffer size was too small.

Reviewed-by: kvn, never